# Androider-Planet

./: .gitignore  README.md
20221229-demo-cAndCpp/: 20221229-demo-cAndCpp.sln
20221229-demo-cAndCpp/20221229-demo-cAndCpp/: 20221229-demo-cAndCpp.cpp  20221229-demo-cAndCpp.vcxproj  20221229-demo-cAndCpp.vcxproj.filters  Base.cpp  Base.h  Complex.cpp  Complex.h  DeepCopy.cpp  DeepCopy.h  ExternTest.cpp  ExternTest.h  FIleTest.cpp  FIleTest.h  Father.h  Observer.cpp  Observer.h  Rectangel.cpp  Rectangel.h  Singleton.cpp  Singleton.h  Subject.cpp  Subject.h  TestObserve.cpp  TestObserve.h  Triangel.cpp  Triangel.h  _extern.cpp  _extern.h  cHeader.c  cHeader.h  cMain.c  cppHeader.cpp  cppHeader.h  extendsTest.cpp  extendsTest.h  file.txt  file1.txt  main.cpp
20221229-demo-cAndCpp/20221229-demo-cAndCpp/Debug/: 20221229-demo-cAndCpp.exe.recipe  20221229-demo-cAndCpp.ilk  20221229-demo-candcpp.obj.enc  deepcopy.obj.enc  extendstest.obj.enc  filetest.obj.enc  testobserve.obj.enc  vc142.idb
20221229-demo-cAndCpp/20221229-demo-cAndCpp/Debug/20221229.85a7bfeb.tlog/: 20221229-demo-cAndCpp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
20221229-demo-cAndCpp/20221229-demo-cAndCpp/x64/Debug/: vc142.idb
20221229-demo-cAndCpp/20221229-demo-cAndCpp/x64/Debug/20221229.85a7bfeb.tlog/: 20221229-demo-cAndCpp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
jnidemo/hellojni/: gradle.properties  settings.gradle
jnidemo/hellojni/app/: build.gradle
jnidemo/hellojni/app/src/androidTest/java/com/android/hellojni/: ExampleInstrumentedTest.java
jnidemo/hellojni/app/src/main/: AndroidManifest.xml
jnidemo/hellojni/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jnidemo/hellojni/app/src/main/cpp/src/: hellojni.cpp
jnidemo/hellojni/app/src/main/java/com/android/hellojni/: HelloCallBack.java  MainActivity.java
jnidemo/hellojni/app/src/main/res/values/: strings.xml
jnidemo/hellojni/app/src/test/java/com/android/hellojni/: ExampleUnitTest.java
jnidemo/hellojni/gradle/wrapper/: gradle-wrapper.properties
jnidemo/hellojni/thirdsocall/: build.gradle
jnidemo/hellojni/thirdsocall/src/androidTest/java/com/android/thirdsocall/: ExampleInstrumentedTest.java
jnidemo/hellojni/thirdsocall/src/main/: AndroidManifest.xml
jnidemo/hellojni/thirdsocall/src/main/cpp/: CMakeLists.txt  thirdCall.cpp
jnidemo/hellojni/thirdsocall/src/main/cpp/include/: hellojni.h
jnidemo/hellojni/thirdsocall/src/main/java/com/android/hellojni/: HelloJni.java
jnidemo/hellojni/thirdsocall/src/main/res/layout/: activity_main.xml
jnidemo/hellojni/thirdsocall/src/main/res/values/: strings.xml  themes.xml
jnidemo/hellojni/thirdsocall/src/main/res/values-night/: themes.xml
opengl/sample_cube/app/: build.gradle
opengl/sample_cube/app/src/main/: AndroidManifest.xml
opengl/sample_cube/app/src/main/assets/: cube.fsh  cube.vsh  cube_dianguangyuan.fsh  cube_dingxiangguang.fsh  cube_juguangyuan.fsh
opengl/sample_cube/app/src/main/cpp/include/: MyGLRenderContext.h
opengl/sample_cube/app/src/main/cpp/include/glm/: exponential.hpp  ext.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x4.hpp  mat3x4.hpp  mat4x3.hpp  vector_relational.hpp
opengl/sample_cube/app/src/main/cpp/src/: MyGLRenderContext.cpp
opengl/sample_cube/app/src/main/res/values/: strings.xml
opengl/sample_depthTest/app/src/main/assets/: cube.fsh
opengl/sample_depthTest/app/src/main/cpp/: CMakeLists.txt
opengl/sample_depthTest/app/src/main/cpp/include/: MyGLRenderContext.h
opengl/sample_depthTest/app/src/main/cpp/include/glm/: CMakeLists.txt  mat3x2.hpp  mat4x4.hpp
opengl/sample_depthTest/app/src/main/cpp/src/: MyGLRenderContext.cpp  native-lib.cpp
opengl/sample_depthTest/app/src/main/res/layout/: activity_main.xml
opengl/sample_depthTest/app/src/main/res/values-night/: themes.xml
opengl/sample_depthTest/gradle/wrapper/: gradle-wrapper.properties
opengl/sample_square/app/src/main/cpp/include/: ImageUtil.h  MyGLRenderContext.h
opengl/sample_square/app/src/main/cpp/include/glm/: geometric.hpp  mat2x3.hpp  vec2.hpp
opengl/sample_square/app/src/main/cpp/src/: ImageUtil.cpp  MyGLRenderContext.cpp
opengl/sample_triangle/: settings.gradle
opengl/sample_triangle/app/src/main/cpp/: CMakeLists.txt
opengl/sample_triangle/app/src/main/cpp/include/: GLUtils.h  LogUtil.h  MyGLRenderContext.h  SampleTriangle.h
opengl/sample_triangle/app/src/main/cpp/include/glm/: common.hpp  fwd.hpp  mat3x3.hpp  mat4x2.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec3.hpp  vec4.hpp
opengl/sample_triangle/app/src/main/cpp/src/: GLUtils.cpp  MyGLRenderContext.cpp  SampleTriangle.cpp  native-lib.cpp
opengl/sample_triangle/app/src/main/res/layout/: activity_main.xml
opengl/sample_triangle/app/src/main/res/values/: themes.xml
(+246 files in other folders)
